infra/kubernetes/base/infrastructure/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: uptime-sentinel
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: uptime-sentinel
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
